--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.1.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
+    "formik": "^2.2.9",
     "framer-motion": "^7.5.3",
     "nodemon": "^2.0.20",
     "react": "^18.2.0",
