--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.1.2",
+    "axios": "^1.2.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "formik": "^2.2.9",
@@ -23,6 +23,9 @@
     "react-lottie": "^1.2.3",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
