--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.2.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
+    "cloudinary": "^1.34.0",
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
     "nodemon": "^2.0.20",
