--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "cloudinary": "^1.34.0",
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
+    "leaflet": "^1.9.3",
     "nodemon": "^2.0.20",
     "openai": "^3.1.0",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-leaflet": "^4.2.0",
     "react-lottie": "^1.2.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
