--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-intersection-observer": "^9.4.3",
     "react-leaflet": "^4.2.0",
     "react-lottie": "^1.2.3",
     "react-redux": "^8.0.5",
