--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_CLIENT_URL=https://meddonor-server.onrender.com
 chat_gpt="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"
+google_map="AIzaSyAkJu97zbk0Tfc1uKYPyfMVgCjhy5QG6DE"
