--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "axios": "^1.2.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
+    "chakra-ui-google-places-autocomplete": "^2.0.1",
     "cloudinary": "^1.34.0",
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
+    "google-map-react": "^2.2.0",
     "leaflet": "^1.9.3",
+    "mapbox-gl": "^2.14.1",
     "nodemon": "^2.0.20",
     "openai": "^3.1.0",
     "react": "^18.2.0",
@@ -25,8 +28,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-intersection-observer": "^9.4.3",
-    "react-leaflet": "^4.2.0",
+    "react-leaflet": "^4.2.1",
     "react-lottie": "^1.2.3",
+    "react-map-gl": "^7.0.23",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
