--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cloudinary": "^1.34.0",
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
+    "geolib": "^3.3.3",
     "google-map-react": "^2.2.0",
     "leaflet": "^1.9.3",
     "mapbox-gl": "^2.14.1",
